--- a/tes_wa.html
+++ b/tes_wa.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Pemesanan</title>
+    <title>Form Pemesanan Tes Wa</title>
     <script>
         function redirectToWhatsApp() {
             const name = document.getElementById('name').value;
